--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "@types/react": "^16.14.2",
     "@types/react-dom": "^16.9.10",
     "axios": "^0.21.1",
-    "bitcoinjs-lib": "^4.0.3",
+    "bitcoinjs-lib": "^5.2.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-scripts": "4.0.1",
@@ -42,7 +42,5 @@
       "last 1 safari version"
     ]
   },
-  "devDependencies": {
-    "@types/bitcoinjs-lib": "^4.0.1"
-  }
+  "devDependencies": {}
 }
